[package]
name = "jvms"
version = "1.0.0"
authors = ["Jacob Smith <jacob101607@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"